uploaded some images

--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
             'image4.jpg',
             'image5.jpg',
             'image6.jpg',
-            'image7.jpg'
+            'image7.jpg',
+            'image8.jpg',
+            'image9.jpg',
+            'image10.jpg'
         ];
 
         // GitHub Pages URL structure
