--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
         const gallery = document.getElementById('gallery');
 
         const images = [
+            { filename: 'madar2.png', title: 'Bird in Flight' },
             { filename: 'image22.jpg', title: 'Autumn Walk' },
             { filename: 'image21.jpg', title: 'Sunset Over Hills' },
             { filename: 'image20.jpg', title: 'City Reflections' },
